--- a/test/DTE_TESTING.ipynb
+++ b/test/DTE_TESTING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "#Con este script se puede obtener la fecha del último documento cargado por CAMMESA\n",
     "def  ultimo_dia_CAMM():\n",
     "\n",
-    "    ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
+    "    ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=DTE_EMISION\")\n",
     "\n",
     "    #fecha = str(ultimafecha.text[10:-2])\n",
     "    \n",
@@ -106,34 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27828\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, connection)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-21\n",
-      "2024-05-21\n"
+      "2024-04-01\n"
      ]
     }
    ],
    "source": [
-    "print(ultimo_dia_bd())\n",
+    "#print(ultimo_dia_bd())\n",
     "print(ultimo_dia_CAMM())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +146,7 @@
     "#tabla = \"Contratos_Corregidos_bk\"\n",
     "#tabla_valores = 'Valores_Gen_Diario_Automatico'\n",
     "#tabla_contratos = 'Contratos_Diario_Automatico'\n",
-    "tabla_dte_unif = 'DTE_UNIF_TEST'\n",
+    "tabla_dte_unif = 'DTE_EMISION'\n",
     "#-------------------------------------------------------#\n",
     "\n",
     "#2\n",
@@ -175,8 +166,8 @@
     "#fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
     "#fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
     "\n",
-    "fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-05-23T23:59:59.000-03:00\"\n",
+    "fecha_desde = \"2024-03-31T00:00:00.000-03:00\"\n",
+    "fecha_hasta = \"2024-03-31T23:59:59.000-03:00\"\n",
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
@@ -211,26 +202,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01-05-2024\n"
+      "31-03-2024\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m     13\u001b[0m     PPO\u001b[38;5;241m=\u001b[39mresponse\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m---> 14\u001b[0m     doc_id \u001b[38;5;241m=\u001b[39m \u001b[43mPPO\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     15\u001b[0m     display(PPO)\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;66;03m#print(json.dumps(PPO, indent=3, sort_keys=True))\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'id': 'B750265B661B694503258AFB001EF9C0',\n",
+       "  'fecha': '10/04/2024',\n",
+       "  'nemo': 'DTE_EMISION',\n",
+       "  'titulo': 'Dte emisión 08/04/2024',\n",
+       "  'comentario': '',\n",
+       "  'hora': '02:38',\n",
+       "  'adjuntos': [{'id': 'DTE2403.zip',\n",
+       "    'campo': '$FILE',\n",
+       "    'nombre': 'DTE2403.zip'}],\n",
+       "  'version': '2024-04-10T02:38:00.000-03:00'},\n",
+       " {'id': '634214DCF7EBDA8003258B120068482D',\n",
+       "  'fecha': '03/05/2024',\n",
+       "  'nemo': 'DTE_EMISION',\n",
+       "  'titulo': 'Dte emisión 30/04/2024',\n",
+       "  'comentario': '',\n",
+       "  'hora': '15:59',\n",
+       "  'adjuntos': [{'id': 'DTE2403.zip',\n",
+       "    'campo': '$FILE',\n",
+       "    'nombre': 'DTE2403.zip'},\n",
+       "   {'id': 'FONINVEMEM2403.txt',\n",
+       "    'campo': '$FILE',\n",
+       "    'nombre': 'FONINVEMEM2403.txt'}],\n",
+       "  'version': '2024-05-03T15:59:00.000-03:00'}]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
