intentando extraer DTE

--- a/DTE_TESTING.ipynb
+++ b/DTE_TESTING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,25 +106,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27708\\3997572139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2024-05-23\n",
       "2024-04-01\n"
      ]
     }
    ],
    "source": [
-    "#print(ultimo_dia_bd())\n",
+    "print(ultimo_dia_bd())\n",
     "print(ultimo_dia_CAMM())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,81 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31-03-2024\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 'B750265B661B694503258AFB001EF9C0',\n",
-       "  'fecha': '10/04/2024',\n",
-       "  'nemo': 'DTE_EMISION',\n",
-       "  'titulo': 'Dte emisión 08/04/2024',\n",
-       "  'comentario': '',\n",
-       "  'hora': '02:38',\n",
-       "  'adjuntos': [{'id': 'DTE2403.zip',\n",
-       "    'campo': '$FILE',\n",
-       "    'nombre': 'DTE2403.zip'}],\n",
-       "  'version': '2024-04-10T02:38:00.000-03:00'},\n",
-       " {'id': '634214DCF7EBDA8003258B120068482D',\n",
-       "  'fecha': '03/05/2024',\n",
-       "  'nemo': 'DTE_EMISION',\n",
-       "  'titulo': 'Dte emisión 30/04/2024',\n",
-       "  'comentario': '',\n",
-       "  'hora': '15:59',\n",
-       "  'adjuntos': [{'id': 'DTE2403.zip',\n",
-       "    'campo': '$FILE',\n",
-       "    'nombre': 'DTE2403.zip'},\n",
-       "   {'id': 'FONINVEMEM2403.txt',\n",
-       "    'campo': '$FILE',\n",
-       "    'nombre': 'FONINVEMEM2403.txt'}],\n",
-       "  'version': '2024-05-03T15:59:00.000-03:00'}]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'[\\n   {\\n      \"adjuntos\": [\\n         {\\n            \"campo\": \"$FILE\",\\n            \"id\": \"DTE2403.zip\",\\n            \"nombre\": \"DTE2403.zip\"\\n         }\\n      ],\\n      \"comentario\": \"\",\\n      \"fecha\": \"10/04/2024\",\\n      \"hora\": \"02:38\",\\n      \"id\": \"B750265B661B694503258AFB001EF9C0\",\\n      \"nemo\": \"DTE_EMISION\",\\n      \"titulo\": \"Dte emisi\\\\u00f3n 08/04/2024\",\\n      \"version\": \"2024-04-10T02:38:00.000-03:00\"\\n   },\\n   {\\n      \"adjuntos\": [\\n         {\\n            \"campo\": \"$FILE\",\\n            \"id\": \"DTE2403.zip\",\\n            \"nombre\": \"DTE2403.zip\"\\n         },\\n         {\\n            \"campo\": \"$FILE\",\\n            \"id\": \"FONINVEMEM2403.txt\",\\n            \"nombre\": \"FONINVEMEM2403.txt\"\\n         }\\n      ],\\n      \"comentario\": \"\",\\n      \"fecha\": \"03/05/2024\",\\n      \"hora\": \"15:59\",\\n      \"id\": \"634214DCF7EBDA8003258B120068482D\",\\n      \"nemo\": \"DTE_EMISION\",\\n      \"titulo\": \"Dte emisi\\\\u00f3n 30/04/2024\",\\n      \"version\": \"2024-05-03T15:59:00.000-03:00\"\\n   }\\n]'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://api.cammesa.com/pub-svc/public/findAllAttachmentZipByNemoId?docId=B750265B661B694503258AFB001EF9C0&nemo=DTE_EMISION\n",
-      "Ingreso a la extraccion\n",
-      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\DTE2403.zip\n",
-      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\.mdb\n",
-      "accediendo al zip\n",
-      "DTE2403.mdb\n",
-      "DTE2403.zip\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "\"There is no item named 'DTE2403.mdb' in the archive\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 65\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;28mprint\u001b[39m(archivo_mdb)\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;28mprint\u001b[39m(zip_name)\n\u001b[1;32m---> 65\u001b[0m     \u001b[43mzip_ref\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract\u001b[49m\u001b[43m(\u001b[49m\u001b[43marchivo_mdb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmdb_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;66;03m# Lee el archivo MDB y cargar la tabla VALORES_GENERADORES en un dataframe\u001b[39;00m\n\u001b[0;32m     69\u001b[0m mdb_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(mdb_path, archivo_mdb)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\zipfile.py:1660\u001b[0m, in \u001b[0;36mZipFile.extract\u001b[1;34m(self, member, path, pwd)\u001b[0m\n\u001b[0;32m   1657\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1658\u001b[0m     path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mfspath(path)\n\u001b[1;32m-> 1660\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_extract_member\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmember\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpwd\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\zipfile.py:1699\u001b[0m, in \u001b[0;36mZipFile._extract_member\u001b[1;34m(self, member, targetpath, pwd)\u001b[0m\n\u001b[0;32m   1695\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Extract the ZipInfo object 'member' to a physical\u001b[39;00m\n\u001b[0;32m   1696\u001b[0m \u001b[38;5;124;03m   file on the path targetpath.\u001b[39;00m\n\u001b[0;32m   1697\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1698\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(member, ZipInfo):\n\u001b[1;32m-> 1699\u001b[0m     member \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetinfo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmember\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1701\u001b[0m \u001b[38;5;66;03m# build the destination pathname, replacing\u001b[39;00m\n\u001b[0;32m   1702\u001b[0m \u001b[38;5;66;03m# forward slashes to platform specific separators.\u001b[39;00m\n\u001b[0;32m   1703\u001b[0m arcname \u001b[38;5;241m=\u001b[39m member\u001b[38;5;241m.\u001b[39mfilename\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39msep)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\zipfile.py:1473\u001b[0m, in \u001b[0;36mZipFile.getinfo\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   1471\u001b[0m info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNameToInfo\u001b[38;5;241m.\u001b[39mget(name)\n\u001b[0;32m   1472\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m info \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1473\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\n\u001b[0;32m   1474\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThere is no item named \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m in the archive\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m name)\n\u001b[0;32m   1476\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m info\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"There is no item named 'DTE2403.mdb' in the archive\""
+      "31-03-2024\n",
+      "Comenzando descarga\n",
+      "C:\\Users\\jadurian\\Documents\\Tapi\\.DTE\\31-03-2024.zip\n",
+      "accediendo al zip\n"
      ]
     }
    ],
@@ -297,8 +242,8 @@
     "            if response.status_code == 200:\n",
     "                PPO=response.json() # respuesta\n",
     "                doc_id = PPO[0]['id']\n",
-    "                display(PPO)\n",
-    "                display(json.dumps(PPO, indent=3, sort_keys=True))\n",
+    "                #display(PPO)\n",
+    "                #display(json.dumps(PPO, indent=3, sort_keys=True))\n",
     "\n",
     "            else:\n",
     "                print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -308,21 +253,21 @@
     "\n",
     "    url_zip = f\"{URL}{method_zip}docId={doc_id}&nemo={NEMO}\" # url para obtener el zip \n",
     "\n",
-    "    #descargar el .zip del doc_id (corregido)\n",
-    "    print(url_zip)\n",
+    "    #descargar el .zip del doc_id\n",
+    "    \n",
     "    try:\n",
     "        with requests.get(url_zip) as response:\n",
     "            if response.status_code == 200:\n",
-    "                print(\"Ingreso a la extraccion\")\n",
-    "                # Crear un objeto ZipFile a partir del contenido descargado\n",
-    "                z = zipfile.ZipFile(io.BytesIO(response.content))\n",
-    "\n",
-    "                # Directorio de destino para extraer los archivos ZIP\n",
+    "                print(\"Comenzando descarga\")\n",
     "                \n",
+    "                nombre_archivo = f\"{dia_iteracion}.zip\"\n",
+    "                path_completo = os.path.join(zip_path, nombre_archivo)\n",
     "\n",
-    "                # Extraer todos los archivos del ZIP en el directorio específico\n",
-    "                z.extractall(zip_path)\n",
-    "                zip_name = z.namelist()[0]\n",
+    "                print(path_completo)\n",
+    "\n",
+    "                \n",
+    "                with open(path_completo, 'wb') as file:\n",
+    "                    file.write(response.content)\n",
     "\n",
     "            else:\n",
     "                print(\"La solicitud falló con el código de estado:\", response.status_code)\n",
@@ -331,25 +276,20 @@
     "        # Manejar la excepción\n",
     "        print(\"Error al realizar la solicitud:\", e)\n",
     "        \n",
+    "    except zipfile.BadZipFile as e:\n",
+    "        # Manejar la excepción si el archivo no es un ZIP válido\n",
+    "        print(\"El archivo descargado no es un archivo ZIP válido:\", e)\n",
+    "        \n",
     "    #Colocar los PATHs correctos donde se traeran los archivos\n",
-    "    \n",
-    "    path_zip_dia = f\"{zip_path}\\{zip_name}\"\n",
-    "\n",
-    "    print(path_zip_dia)\n",
-    "    print(mdb_path)\n",
     "    \n",
     "    try:\n",
     "        # Extrae el archivo MDB de cada archivo ZIP diario\n",
-    "        with zipfile.ZipFile(path_zip_dia, 'r') as zip_ref:\n",
+    "        with zipfile.ZipFile(path_completo, 'r') as zip_ref:\n",
     "            print(\"accediendo al zip\")\n",
     "            # Encontrar el nombre del archivo MDB dentro del ZIP diario\n",
-    "            archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
-    "\n",
-    "            print(archivo_mdb)\n",
-    "            print(zip_name)\n",
-    "            zip_ref.extract(archivo_mdb, path=mdb_path)\n",
-    "    \n",
-    "\n",
+    "            #archivo_mdb = os.path.splitext(zip_name)[0] + \".mdb\"\n",
+    "            zip_ref.extractall(mdb_path)\n",
+    "        continue\n",
     "        # Lee el archivo MDB y cargar la tabla VALORES_GENERADORES en un dataframe\n",
     "        mdb_file = os.path.join(mdb_path, archivo_mdb)\n",
     "        conn_str = f\"Driver={{Microsoft Access Driver (*.mdb, *.accdb)}};DBQ={mdb_file};\"\n",
@@ -425,7 +365,7 @@
     "        #dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
     "\n",
     "        #-------------------------------------------------------#\n",
-    "        \n",
+    "    \n",
     "    except FileNotFoundError:\n",
     "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
     "\n",
@@ -435,21 +375,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_GenTER' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_GenTER\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_GenTER' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_GenTER"
    ]
